# recomp-ui

./: .gitignore  CMakeLists.txt  README.md  keybinds.ini  recomp_ui.cmake
assets/common/fonts/: NOTICE.md
assets/common/img/: check_off.tga  check_on.tga  verdict_none.tga  verdict_ok.tga
assets/consoles/gb/img/: brand_gb.tga  brand_gbc.tga  pad_gb.tga  pad_gbc.tga
assets/consoles/gba/img/: pad_gba.tga
assets/consoles/genesis/img/: boxart_sonic1.tga  brand_genesis.tga  pad_genesis.tga
assets/consoles/n64/img/: brand_n64.tga  cart_blue.tga  cart_empty.tga  cart_green.tga  cart_red.tga  cart_yellow.tga  pad_n64.tga
assets/consoles/nes/img/: brand_nes.tga  pad_nes.tga
assets/consoles/psx/img/: brand_psx.tga  disc.tga  pad_analog.tga  pad_digital.tga
assets/img/: caret.tga  memcard.tga  pad_gba.tga  verdict_bad.tga  verdict_warn.tga
docs/: ARCHITECTURE.md  HANDOFF.md  HOST_NETPLAY.md  RUNTIME_UI.md
src/: crc32.c  crc32.h  ips_patch.c  keybinds.c  keybinds.h  launcher_binds.c  launcher_binds.h  launcher_debug.c  launcher_files.c  launcher_files.h  launcher_model.c  launcher_model.h  launcher_ng_capi.c  launcher_panels.h  launcher_platform_sdl2.c  launcher_profile.h  launcher_system.h  launcher_theme.h  memcard_format.c  proto_main.c  recomp_launcher.h  recomp_runtime_ui.h
src/backends/imgui/: launcher_imgui.cpp
src/common/: ips_patch.h  launcher_binds.c  launcher_binds.h  launcher_debug.c  launcher_files.c  launcher_input.c  launcher_input.h  launcher_model.c  launcher_model.h  launcher_ng_capi.c  launcher_panels.h  launcher_platform_sdl2.c  launcher_platform_sdl3.c  launcher_sdlcompat.h  launcher_system_types.h  launcher_theme.h  launcher_udp_port.c  launcher_udp_port.h  recomp_runtime_settings.c  recomp_runtime_ui.c  recomp_runtime_ui_internal.h  sha1.c  sha1.h  sha256.c  sha256.h
src/common/backends/imgui/: launcher_imgui.cpp  runtime_ui_imgui.cpp
src/consoles/gb/: gb_binds.c  gb_binds.h  gb_profile.h
src/consoles/gba/: gba_profile.h
src/consoles/genesis/: genesis_binds.c  genesis_binds.h  genesis_profile.h
src/consoles/n64/: n64_binds.c  n64_binds.h  n64_profile.h
src/consoles/nes/: nes_binds.c  nes_binds.h  nes_profile.h
src/consoles/psx/: memcard_format.h  psx_binds.c  psx_binds.h  psx_profile.h
src/consoles/snes/: snes_profile.h
test_data/: msu1_demo.ips
tests/: runtime_ui_imgui_test.cpp  runtime_ui_test.c
